# Brawr

./: Cargo.toml
migrations/2023-07-22-104315_create_users/: up.sql
migrations/2023-07-23-092010_create_characters/: up.sql
migrations/2023-07-23-092801_fk_users_characters/: down.sql  up.sql
migrations/2023-07-26-184813_sessions/: up.sql
migrations/2023-07-26-190130_fk_sessions_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: character_controller.rs  mod.rs  user_controller.rs
src/models/: character.rs  error.rs  mod.rs  session.rs  user.rs
src/services/: mod.rs  pg_connection.rs
src/services/character/: add_character.rs  get_character_by_id.rs  get_characters.rs  mod.rs
src/services/user/: add_user.rs  get_user_by_id.rs  get_users.rs  mod.rs
