[package]
name = "brawr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_contrib = "0.4.11"
serde = { version = "1.0.171", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.9.1"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
